# Schedule-Balancer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  core.py  main.py  render.py  schemas.py  types.py
src/templates/: template.html
