[tool.poetry]
name = "student-schedule-balancer"
version = "0.1.0"
description = ""
authors = ["Stanislav Lyu. <wallseat@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
schedule_balancer = 'src.main:main'
